@@ -8,18 +8,13 @@ What is Swish?
     remote files via SSH/SFTP.
     
 Status:
-    ********************************************************************
     In this version, Swish is finally starting to look like a real SFTP 
     client.  As well as management tasks such as renaming and deleting 
     files on the remote server users can drag and drop the contents of files
     and folders from the remote server to the local filesystem.
-    ********************************************************************
  
     Currently, Swish only supports simple password and keyboard-interactive
-    authentication. Also, as it lacks any ability to authenticate a host's key 
-    it will BLINDLY CONNECT TO ANY HOST YOU SPECIFY - *WATCH OUT*!
-    Adding host-key has been postponed for the time being but patches are
-    welcome.
+    authentication. 
 
 Supported Operating Systems:
     Windows Vista (most tested)
