@@ -1,3 +1,6 @@
+swish-0.3.1.0
+-Added host-key verification.
+
 swish-0.3.0.1
 -Added command buttons to add and remove hosts (Windows Vista and above).
 -Allow the user to cancel a file transfer mid-file rather than only between
